--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@project-serum/anchor": "^0.6.0-beta.2",
     "@project-serum/serum": "^0.13.33",
-    "@project-serum/swap-ui": "^0.1.0-alpha.17",
+    "@project-serum/swap-ui": "^0.1.0-alpha.18",
     "@solana/spl-token-registry": "^0.2.102",
     "@solana/web3.js": "^1.10.1",
     "@testing-library/jest-dom": "^5.11.6",
@@ -32,6 +32,7 @@
     "notistack": "^1.0.2",
     "qrcode.react": "^1.0.0",
     "react": "^17.0.1",
+    "react-async-hook": "^3.6.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "tweetnacl": "^1.0.3",
