--- a/extension/src/manifest.json
+++ b/extension/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Sollet",
-  "description": "Solana SPL Token Wallet",
+  "name": "Shallot",
+  "description": "Proof of Concept (Fork of Solana SPL Token Wallet)",
   "version": "0.2.7",
   "browser_action": {
     "default_popup": "index.html",
