move account storage and management into provider

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Solana Wallet",
-  "name": "Solana SPL Token Wallet",
+  "short_name": "Shallot Solana Wallet",
+  "name": "Shallot (Solana SPL Token Wallet Fork)",
   "icons": [
     {
       "src": "favicon.ico",
