add hackathon entry documentation and plumb the provision message

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "build:extension": "yarn build && cp -a ./build/. ./extension/build/ && yarn build:extension-scripts",
     "build:extension-scripts": "cp -a ./extension/src/. ./extension/build/.",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "move": "rsync -avu --delete ./extension/build /media/shared2/extension"
   },
   "eslintConfig": {
     "env": {
